<resources>
    <string name="app_name">Netbeast</string>
    <string name="web">http://netbeast.co/</string>
    <string name="connectedto">Connected to:</string>
    <string name="explore">EXPLORE</string>
    <string name="none">NONE</string>
    <string name="install">INSTALL</string>
    <string name="ip_dialog_message">Set Dashboard IP</string>
    <string name="connect_dialog_button">Connect</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="ip_error_dialog">Error: you must enter a valid IP.</string>
    <string name="port_error_dialog">Error: you must enter a valid port.</string>
    <string name="hint_dialog_text">Dashboard IP</string>
    <string name="hint_port_dialog_text">Dashboard port</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="explore_activity_title">Apps</string>
    <string name="install_activity_title">Install</string>
    <string name="plugins_activity_title">Plugins</string>
    <string name="activities_activity_title">Activities</string>
    <string name="remove_activity_title">Remove</string>
    <string name="select_dashboard">Select Dashboard</string>
    <string name="choose_dashboard">Choose a dashboard to connect</string>
    <string name="hint_install_activity">Paste here an URL to install from git</string>
    <string name="install_explore">Explore apps to install</string>
    <string name="install_git">Install from git</string>
    <string name="twitter">\@netbeast_co</string>
    <string name="slack">netbeast-community</string>
    <string name="discovering_dashboards">Discovering dashboards in your network...</string>
    <string name="cloud">Use the cloud dashboard</string>
    <string name="nodashboard">There is not any dashboard running in your network</string>
    <string name="manual">Choose a dashboard manually</string>
    <string name="dashboard_cloud">dashboard.827722d5.svc.dockerapp.io</string>
    <string name="mqtt_uri">tcp://test.mosca.io</string>
    <string name="clientId">netbeastApp</string>

    <!-- Strings related to login and sign up-->
    <string name="prompt_email">your@email.com</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Choose a username</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_email">There isn\'t any user registered with this email</string>
    <string name="error_repeated_email">There is already a user registered with this email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_different_passwords">Passwords don\'t match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_text">Don\'t you have an account yet?</string>
    <string name="log_in_text">Do you already have an account?</string>
    <string name="type_pass">Type a password</string>
    <string name="retype">Retype your password</string>
</resources>
