<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:typeface="sans"
                android:textSize="20sp"
                android:text="@string/select_dashboard"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dashboards"
        android:text="@string/choose_dashboard"
        android:textColor="@color/text"
        android:typeface="sans"
        android:textSize="20sp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:textStyle="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cloud_button"
        android:text="@string/cloud"
        android:background="#e0e0e0"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="sans"
        android:textSize="20sp"
        android:textAlignment="center"
        android:onClick="cloudDashboard"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="normal"
        android:layout_below="@+id/list"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_below="@id/tv_dashboards" />

    <TextView
        android:id="@+id/nodashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodashboard"
        android:textColor="@color/error"
        android:textSize="20sp"
        android:textAlignment="center"
        android:typeface="sans"
        android:layout_below="@id/tv_dashboards"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:textStyle="normal" />

    <Button
        android:id="@+id/manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:text="@string/manual"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="sans"
        android:textSize="20sp"
        android:textAlignment="center"
        android:onClick="manualDashboard"
        android:layout_below="@+id/nodashboard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="normal"
        android:visibility="invisible"/>

</RelativeLayout>