<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:typeface="sans"
                android:textSize="20sp"
                android:text="@string/install_activity_title"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/installButton1"
        android:text="@string/install_explore"
        android:textColor="@color/text"
        android:typeface="sans"
        android:textSize="@dimen/app_name"
        android:textAlignment="center"
        android:onClick="exploreInstallableApps"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/installButton2"
        android:text="@string/install_git"
        android:textColor="@color/text"
        android:typeface="sans"
        android:textAlignment="center"
        android:textSize="@dimen/app_name"
        android:onClick="gitInstallApps"
        android:layout_below="@+id/installButton1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>