<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/viewDialog">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDialog"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_text"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:typeface="sans"
                android:textSize="20sp"
                android:layout_marginRight="30dp"
                android:text="@string/ip_dialog_message"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <EditText
        android:id="@+id/ipTextEdit"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_dialog_text"
        android:textColorHint="@color/hintText"
        android:textColor="@color/text"/>
    <EditText
        android:id="@+id/portTextEdit"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_port_dialog_text"
        android:textColorHint="@color/hintText"
        android:textColor="@color/text"/>

</LinearLayout>