<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:typeface="sans"
                android:textSize="20sp"
                android:text="@string/action_sign_up"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/view">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/log_in_title"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/text"
                    android:typeface="sans"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text1"
                    android:layout_below="@id/log_in_title"
                    android:textColorHint="@color/hintText"
                    android:background="@color/text"
                    android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text2"
                    android:layout_below="@id/text1"
                    android:textColorHint="@color/hintText"
                    android:background="@color/text"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text3"
                    android:layout_below="@id/text2"
                    android:textColorHint="@color/hintText"
                    android:background="@color/text"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text4"
                    android:layout_below="@id/text3"
                    android:textColorHint="@color/hintText"
                    android:background="@color/text"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_up"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/loginButton"
                    android:textSize="@dimen/app_name"
                    android:background="@drawable/button_border"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/log_in_text"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/sign_up_button"
                    android:text="@string/log_in_text"
                    android:textColor="@color/text"
                    android:typeface="sans"
                    android:textSize="@dimen/app_name"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/log_in_link"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/log_in_text"
                    android:text="@string/action_log_in"
                    android:textColor="@color/loginButton"
                    android:typeface="sans"
                    android:textSize="@dimen/app_name"
                    android:layout_marginTop="10dp"
                    android:clickable="true" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>